adicionei um novo paragráfo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse perferendis animi architecto itaque enim ex exercitationem ipsa, dolores consequatur expedita eveniet, hic quidem repellendus ducimus cumque, tempore soluta explicabo.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed incidunt maiores excepturi, voluptates eveniet saepe cum cumque! Aliquam ipsa corrupti voluptates quisquam officia amet, obcaecati, sit modi, ipsam earum molestias?</p>
 </body>
 </html>
